fix continue watching label and z-index stuff

--- a/src/renderer/vsh/panel.css
+++ b/src/renderer/vsh/panel.css
@@ -40,6 +40,7 @@
 	position: relative;
 	margin: 0;
 	border-radius: inherit;
+	z-index: 5;
 	/* display: flex;
 	flex-grow: 1;
 	place-content: stretch; */
@@ -59,6 +60,7 @@
 	background-size: auto;
 	background-position: center;
 	background-repeat: no-repeat;
+	z-index: 5;
 }
 
 .panel.debug .panel-image {
@@ -68,10 +70,11 @@
 .panel .border-highlight {
 	position: absolute;
 	/* border: 1px solid rgba(255, 255, 255, 0.20); */
-	border: 2px solid rgba(255, 255, 255, 0.20);
+	border: 3px solid rgba(255, 255, 255, 0.20);
 	border-radius: inherit;
 	width: 100%;
 	height: 100%;
+	z-index: 10;
 }
 
 .panel .shadow {
@@ -80,6 +83,9 @@
 	height: 100%;
 	border-radius: inherit;
 	background: var(--panel-blank-colour);
-	box-shadow: 0 0 1px 1px #000000, 0 36px 100px 0 rgba(0, 0, 0, 0.70);
+	box-shadow:
+		0 0 1px 1px #000000,
+		0 36px 100px 0 rgba(0, 0, 0, 0.70);
 	mix-blend-mode: multiply;
+	z-index: 1;
 }
